# monmonez

./: .gitignore  Makefile  README.md  Statement.py  config.py  main.py  models.py  parse.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: codeql.yml
